# rust-axum-backend

./: .env  Cargo.toml  bacon.toml
src/: main.rs
src/controller/: auth_controller.rs  category_controller.rs  file_controller.rs  http_controller.rs  mod.rs  user_controller.rs
src/model/: auth_model.rs  category_model.rs  mod.rs  user_model.rs  utils_model.rs
src/utils/: mod.rs  route_guard.rs  utils.rs
