[package]
name = "rust_axum_pos_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
bcrypt = "0.17.0"
chrono = { version = "0.4.40", features = ["serde"] }
dotenvy = "0.15.7"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
serde_with = "3.12.0"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "tls-native-tls", "macros", "chrono", "time"] }
time = { version = "0.3.37", features = ["serde"] }
tokio = { version = "1.43.0", features = ["full"] }
